test/org/midica/testfiles/failing/include-soundfont-twice.midica
INCLUDE inc/instruments.midica

0 c /4

SOUNDFONT ../working/java-emergency-soundfont.sf2
SOUNDFONT ../working/java-emergency-soundfont.sf2
